# FastAPI-Starter

./: .editorconfig  Makefile  README.md  README.md.jinja  pyproject.toml
app/: lifespan.py  main.py
app/adapters/cache/: cache.py
app/adapters/db/: session.py
app/adapters/db/models/: base.py  user.py
app/adapters/db/repositories/: base_repositories.py  user_repositories.py
app/adapters/messaging/: celery_config.py
app/api/: router.py
app/api/dependencies/: dependencies.py
app/api/v1/endpoints/: user_endpoints.py
app/api/v1/schemas/: user_schemas.py
app/core/: config.py
app/core/domain/: base_domain.py  user_domain.py
app/core/enums/: response_enums.py
app/core/schemas/: __init__.py  base_response.py
app/core/services/: user_service.py
app/jobs/: tasks.py
app/middleware/: exception_handler.py  logger.py
app/utils/: helpers.py  logger.py
conf/: logging.yaml
scripts/: init_db.py  start_app.py
test/: conftest.py
test/api/: test_xxx.py
test/core/: test_xxx_service.py
