[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.3.2",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "celery>=5.5.3",
    "fastapi>=0.122.0",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pytest>=9.0.1",
    "python-json-logger>=4.0.0",
    "pyyaml>=6.0.3",
    "redis>=7.1.0",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
]
